feat: integrate Arrow and Parquet for file handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,34 +25,16 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(argparse)
 
 # ------ arrow ------
-# Avoid building unnecessary components
-set(ARROW_BUILD_STATIC ON CACHE BOOL "" FORCE)
-set(ARROW_BUILD_SHARED OFF CACHE BOOL "" FORCE)
-set(ARROW_PARQUET ON CACHE BOOL "" FORCE)
-set(ARROW_WITH_SNAPPY ON CACHE BOOL "" FORCE)
-set(ARROW_DEPENDENCY_SOURCE "BUNDLED" CACHE STRING "" FORCE)
-set(ARROW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-set(ARROW_BUILD_UTILITIES OFF CACHE BOOL "" FORCE)
-set(ARROW_COMPUTE OFF CACHE BOOL "" FORCE)
-set(ARROW_CSV OFF CACHE BOOL "" FORCE)
-set(ARROW_JSON OFF CACHE BOOL "" FORCE)
-set(ARROW_FILESYSTEM ON CACHE BOOL "" FORCE)
-set(ARROW_JEMALLOC OFF CACHE BOOL "" FORCE)
-set(ARROW_SIMD_LEVEL "NONE" CACHE STRING "" FORCE)
-
-FetchContent_Declare(
-        arrow
-        GIT_REPOSITORY https://github.com/apache/arrow.git
-        GIT_TAG        apache-arrow-22.0.0
-        SOURCE_SUBDIR  cpp
-)
-FetchContent_MakeAvailable(arrow)
+find_package(Arrow REQUIRED)
+find_package(Parquet REQUIRED)
 
 add_executable(fast-detect-gpt src/main.cpp
         src/detect.cpp
         src/utils.cpp
+        src/io.cpp
         include/detect.h
         include/utils.h
+        include/io.h
 )
 
-target_link_libraries(fast-detect-gpt PRIVATE llama argparse::argparse)
+target_link_libraries(fast-detect-gpt PRIVATE llama argparse::argparse Arrow::arrow_shared Parquet::parquet_shared)
